<resources>
    <string name="app_name">Shopping List</string>


    <!-- Strings related to facebook login -->
    <string name="fb_login_protocol_scheme" translatable="false">fbXXXXXXXXXXXXXX</string>
    <string name="facebook_app_id" translatable="false">fbXXXXXXXXXXXXXXXX</string>

    <!-- Strings related to google login -->
    <string name="google_login_web_client_id" translatable="false">XXXXXXXXXXXXXX.apps.googleusercontent.com</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_login_with_facebook">Sign in with Facebook</string>
    <string name="action_login_with_google">Sign in with Google</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="loginErrorMsg">Login error</string>
    <string name="recoverErrorMsg">Error recovering password</string>
    <string name="registerErrorMsg">Sign up error</string>
    <string name="title_activity_register">Register</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_up_short">Sign up</string>
    <string name="error_password_not_match">Repeat password not match</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_description">Description (Optional)</string>
    <string name="prompt_number">Number (Optional)</string>
    <string name="action_save">Save</string>
    <string name="save_error">Save error</string>
    <string name="delete_error">Delete error</string>
    <string name="error_mandatory_field">Mandatory field</string>
    <string name="account">Account</string>
    <string name="logout">Logout</string>
    <string name="error_getting_items">Error getting items</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="sure_to_delete">Are you sure to delete?</string>
    <string name="dependency_load_error">Error getting resources</string>
    <string name="title_activity_account">Account</string>
    <string name="action_change">Change</string>
    <string name="change_password">Change password</string>
    <string name="promt_last_name">Last name</string>
    <string name="promt_first_name">First name</string>
    <string name="error_invalid_first_name">Invalid first name</string>
    <string name="error_invalid_last_name">Invalid last name</string>
    <string name="save_success">Save success</string>
    <string name="my_account">My account</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="error_existing_email">This account is already registered</string>
    <string name="activate_account_first">Confirm your email first</string>
    <string name="action_recover">Recover</string>
    <string name="title_activity_recover_password">Recover password</string>
    <string name="recover_password">Forgot password?</string>
    <string name="recover_password_success">We have sent you an email with password recovery instructions</string>
    <string name="ok">OK</string>

        <string name="entity_item">Item</string>
    <string name="title_activity_item">Item</string>
    <string name="title_activity_item_detail">Item</string>
    <string name="field_item_quantity">quantity</string>
    <string name="entity_item_prompt_quantity">quantity</string>
    <string name="error_item_invalid_quantity">Invalid quantity</string>
    <string name="field_item_productId">productId</string>
    <string name="entity_item_prompt_productId">productId</string>
    <string name="error_item_invalid_productId">Invalid productId</string>
    <string name="field_item_productName">productName</string>
    <string name="entity_item_prompt_productName">productName</string>
    <string name="error_item_invalid_productName">Invalid productName</string>
        <string name="entity_product">Product</string>
    <string name="title_activity_product">Product</string>
    <string name="title_activity_product_detail">Product</string>
    <string name="field_product_name">name</string>
    <string name="entity_product_prompt_name">name</string>
    <string name="error_product_invalid_name">Invalid name</string>
    <!--strings-needle-->


</resources>
